--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
   "dependencies": {
     "express": "^4.18.1",
+    "node": "^18.10.0",
     "react": "^18.2.0",
     "sequelize": "^6.23.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "restaurant-gallery-api",
+  "description": "- Create a react app that allows users to find local restaurants based on preferences and leave a rating for them.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZachADavis/Restaurant-Gallery-API.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ZachADavis/Restaurant-Gallery-API/issues"
+  },
+  "homepage": "https://github.com/ZachADavis/Restaurant-Gallery-API#readme"
 }
