--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "node": "^18.10.0",
     "react": "^18.2.0",
@@ -12,7 +13,6 @@
   "description": "- Create a react app that allows users to find local restaurants based on preferences and leave a rating for them.",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ZachADavis/Restaurant-Gallery-API.git"
